// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerSelectAccount Initial Rendering renders LedgerConnect when ledger error exists 1`] = `
<RCTSafeAreaView
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "flex": 1,
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "marginLeft": 52.50000000000001,
        "marginRight": 52.50000000000001,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": 0,
          "width": "100%",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          {
            "height": 68,
            "width": 68,
          }
        }
      />
      <TouchableOpacity
        onPress={[MockFunction]}
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "flex-end",
            "width": 48,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": undefined,
                "fontSize": 15,
              },
              {
                "color": "#121314",
                "fontSize": 28,
              },
              {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </TouchableOpacity>
    </View>
    <Text
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Regular",
            "fontSize": 30,
            "marginVertical": 2,
          },
          undefined,
          undefined,
          {
            "fontFamily": "Geist-Bold",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "fontFamily": "Geist-Regular",
            "fontSize": 24,
          },
        ]
      }
    >
      Connect Ledger
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 106.72,
        }
      }
    >
      <Image
        source={1}
        style={
          {
            "height": 64,
            "overflow": "visible",
            "resizeMode": "contain",
            "width": 450,
          }
        }
      />
    </View>
    <View
      style={
        {
          "marginTop": 66.7,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 30,
                "marginVertical": 2,
              },
              undefined,
              undefined,
              {
                "fontFamily": "Geist-Bold",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "fontSize": 18,
              },
            ]
          }
        >
          Looking for device
        </Text>
        <ActivityIndicator
          style={
            {
              "marginLeft": 10,
            }
          }
        />
      </View>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "marginTop": 26.68,
            },
          ]
        }
      >
        Please make sure your Ledger device is:
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        1. Unlock your Ledger device
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        2. Install and open the Ethereum app
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        3. Enable Bluetooth
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        5. Do not disturb must be turned off
      </Text>
      <Text
        onPress={[Function]}
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            {
              "fontFamily": "Geist-Bold",
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "fontSize": 16,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "color": "#4459ff",
            },
            undefined,
            undefined,
            undefined,
            {
              "marginTop": 33.35,
            },
          ]
        }
      >
        How to install the Ethereum app on a Ledger device
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "marginTop": 33.35,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`LedgerSelectAccount Initial Rendering renders LedgerConnect when no accounts are loaded 1`] = `
<RCTSafeAreaView
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "flex": 1,
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "marginLeft": 52.50000000000001,
        "marginRight": 52.50000000000001,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": 0,
          "width": "100%",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          {
            "height": 68,
            "width": 68,
          }
        }
      />
      <TouchableOpacity
        onPress={[MockFunction]}
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "flex-end",
            "width": 48,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": undefined,
                "fontSize": 15,
              },
              {
                "color": "#121314",
                "fontSize": 28,
              },
              {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </TouchableOpacity>
    </View>
    <Text
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Regular",
            "fontSize": 30,
            "marginVertical": 2,
          },
          undefined,
          undefined,
          {
            "fontFamily": "Geist-Bold",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "fontFamily": "Geist-Regular",
            "fontSize": 24,
          },
        ]
      }
    >
      Connect Ledger
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 106.72,
        }
      }
    >
      <Image
        source={1}
        style={
          {
            "height": 64,
            "overflow": "visible",
            "resizeMode": "contain",
            "width": 450,
          }
        }
      />
    </View>
    <View
      style={
        {
          "marginTop": 66.7,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 30,
                "marginVertical": 2,
              },
              undefined,
              undefined,
              {
                "fontFamily": "Geist-Bold",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "fontSize": 18,
              },
            ]
          }
        >
          Looking for device
        </Text>
        <ActivityIndicator
          style={
            {
              "marginLeft": 10,
            }
          }
        />
      </View>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "marginTop": 26.68,
            },
          ]
        }
      >
        Please make sure your Ledger device is:
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        1. Unlock your Ledger device
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        2. Install and open the Ethereum app
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        3. Enable Bluetooth
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        5. Do not disturb must be turned off
      </Text>
      <Text
        onPress={[Function]}
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            {
              "fontFamily": "Geist-Bold",
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "fontSize": 16,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "color": "#4459ff",
            },
            undefined,
            undefined,
            undefined,
            {
              "marginTop": 33.35,
            },
          ]
        }
      >
        How to install the Ethereum app on a Ledger device
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "marginTop": 33.35,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`LedgerSelectAccount getDisplayErrorMessage renders LedgerConnect when EthAppNotOpen error occurs 1`] = `
<RCTSafeAreaView
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "flex": 1,
      "position": "relative",
    }
  }
>
  <View
    style={
      {
        "marginLeft": 52.50000000000001,
        "marginRight": 52.50000000000001,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": 0,
          "width": "100%",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={1}
        style={
          {
            "height": 68,
            "width": 68,
          }
        }
      />
      <TouchableOpacity
        onPress={[MockFunction]}
        style={
          {
            "flex": 1,
            "flexDirection": "row",
            "height": 48,
            "justifyContent": "flex-end",
            "width": 48,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": undefined,
                "fontSize": 15,
              },
              {
                "color": "#121314",
                "fontSize": 28,
              },
              {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </TouchableOpacity>
    </View>
    <Text
      style={
        [
          {
            "color": "#121314",
            "fontFamily": "Geist-Regular",
            "fontSize": 30,
            "marginVertical": 2,
          },
          undefined,
          undefined,
          {
            "fontFamily": "Geist-Bold",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "fontFamily": "Geist-Regular",
            "fontSize": 24,
          },
        ]
      }
    >
      Connect Ledger
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 106.72,
        }
      }
    >
      <Image
        source={1}
        style={
          {
            "height": 64,
            "overflow": "visible",
            "resizeMode": "contain",
            "width": 450,
          }
        }
      />
    </View>
    <View
      style={
        {
          "marginTop": 66.7,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 30,
                "marginVertical": 2,
              },
              undefined,
              undefined,
              {
                "fontFamily": "Geist-Bold",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "fontSize": 18,
              },
            ]
          }
        >
          Looking for device
        </Text>
        <ActivityIndicator
          style={
            {
              "marginLeft": 10,
            }
          }
        />
      </View>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "marginTop": 26.68,
            },
          ]
        }
      >
        Please make sure your Ledger device is:
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        1. Unlock your Ledger device
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        2. Install and open the Ethereum app
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        3. Enable Bluetooth
      </Text>
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "paddingLeft": 7,
            },
          ]
        }
      >
        5. Do not disturb must be turned off
      </Text>
      <Text
        onPress={[Function]}
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            {
              "fontFamily": "Geist-Bold",
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "fontSize": 16,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            {
              "color": "#4459ff",
            },
            undefined,
            undefined,
            undefined,
            {
              "marginTop": 33.35,
            },
          ]
        }
      >
        How to install the Ethereum app on a Ledger device
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "marginTop": 33.35,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderTopLeftRadius": 10,
        "borderTopRightRadius": 10,
        "height": "100%",
        "position": "absolute",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "marginTop": 133.4,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={1}
      />
      <View
        style={
          {
            "alignItems": "center",
            "marginHorizontal": 75,
            "marginTop": 66.7,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 30,
                "marginVertical": 2,
              },
              undefined,
              undefined,
              {
                "fontFamily": "Geist-Bold",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "fontSize": 16,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "fontSize": 24,
              },
            ]
          }
        >
          An error occurred
        </Text>
        <Text
          style={
            [
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 30,
                "marginVertical": 2,
              },
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              undefined,
              {
                "color": "#b7bbc8",
              },
            ]
          }
        >
          Ethereum app not open
        </Text>
        <View
          style={
            {
              "marginTop": 66.7,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            Please open the Ethereum app on your Ledger device.
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "flex-end",
            "paddingBottom": "5.5%",
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            [
              [
                {
                  "borderRadius": 12,
                  "justifyContent": "center",
                  "padding": 15,
                },
                {
                  "backgroundColor": "#4459ff",
                  "minHeight": 50,
                },
                undefined,
              ],
              null,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#007aff",
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                null,
                [
                  {
                    "fontFamily": "Geist-Bold",
                    "fontSize": 14,
                    "textAlign": "center",
                  },
                  {
                    "color": "#ffffff",
                  },
                  {
                    "width": 600,
                  },
                ],
                null,
              ]
            }
          >
            Retry
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
